--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#experience">Experience</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#education">Education</a>
           </li>
           <li class="nav-item">
@@ -42,7 +45,22 @@
         </ul>
       </nav>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <div class="container">
+        <div class="container-right">
+          <section class="section" id="profile"></section>
+          <section class="section" id="education"></section>
+          <section class="section" id="experience"></section>
+          <section class="section" id="courses"></section>
+          <section class="section" id="english"></section>
+        </div>
+        <div class="container-left">
+          <div class="photo"></div>
+          <section class="section" id="contacts"></section>
+          <section class="section" id="skills"></section>
+        </div>
+      </div>
+    </main>
     <footer class="footer"></footer>
   </body>
 </html>
