refactor: clean the folder img

--- a/index.html
+++ b/index.html
@@ -46,19 +46,17 @@
       </nav>
     </header>
     <main class="main">
-      <div class="container">
-        <div class="container-right">
-          <section class="section" id="profile"></section>
-          <section class="section" id="education"></section>
-          <section class="section" id="experience"></section>
-          <section class="section" id="courses"></section>
-          <section class="section" id="english"></section>
-        </div>
-        <div class="container-left">
-          <div class="photo"></div>
-          <section class="section" id="contacts"></section>
-          <section class="section" id="skills"></section>
-        </div>
+      <div class="container-left">
+        <div class="photo"></div>
+        <section class="section" id="contacts"><h2></h2></section>
+        <section class="section" id="skills"><h2></h2></section>
+      </div>
+      <div class="container-right">
+        <section class="section" id="profile"><h2>Profile</h2></section>
+        <section class="section" id="education"><h2>Education</h2></section>
+        <section class="section" id="experience"><h2>Experience</h2></section>
+        <section class="section" id="courses"><h2>Courses</h2></section>
+        <section class="section" id="english"><h2>English</h2></section>
       </div>
     </main>
     <footer class="footer"></footer>
