--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Cormorant+Garamond:ital,wght@1,300&family=Edu+VIC+WA+NT+Beginner&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&family=Noto+Sans:wght@300&family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Slab:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Cormorant+Garamond:ital,wght@1,300&family=Edu+VIC+WA+NT+Beginner&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&family=Noto+Sans:wght@300&family=Roboto+Slab:wght@400;500&display=swap"
       rel="stylesheet"
     />
@@ -31,7 +35,7 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="#code">Code</a></li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#courses">Courses</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#experience">Experience</a>
@@ -48,15 +52,87 @@
     <main class="main">
       <div class="container-left">
         <div class="photo"></div>
-        <section class="section" id="contacts"><h2></h2></section>
-        <section class="section" id="skills"><h2></h2></section>
+        <section class="section">
+          <h1 class="section-title-left-h1">Alexandr Lozichny</h1>
+        </section>
+        <section class="section" id="contacts">
+          <h2 class="section-title-left">Contacts</h2>
+          <ul class="contact-list">
+            <li>Gomel, Belarus</li>
+            <li>
+              Email:
+              <a class="mail" href="mailto:aleksandrlozicnyj@gmail.com"
+                >aleksandrlozicnyj@gmail.com</a
+              >
+            </li>
+            <li>
+              Github:
+              <a
+                class="git"
+                target="_blank"
+                href="https://github.com/Sasha867?tab=repositories"
+                >Sasha867</a
+              >
+            </li>
+            <li>
+              Telegram:
+              <a class="telegram" target="_blank" href="https://t.me/Tank866"
+                >@Tank866</a
+              >
+            </li>
+          </ul>
+        </section>
+        <section class="section" id="skills">
+          <h2 class="section-title-left">Skills</h2>
+          <ul></ul>
+        </section>
       </div>
       <div class="container-right">
-        <section class="section" id="profile"><h2>Profile</h2></section>
-        <section class="section" id="education"><h2>Education</h2></section>
-        <section class="section" id="experience"><h2>Experience</h2></section>
-        <section class="section" id="courses"><h2>Courses</h2></section>
-        <section class="section" id="english"><h2>English</h2></section>
+        <section class="section" id="profile">
+          <h2 class="section-title-right">Profile</h2>
+          <ul class="profile-list">
+            <ol>
+              <li>
+                I'm a front-end developer who completed courses "IT Academy
+                Step".
+              </li>
+              <li>
+                I'm currently working on a sports store project using:
+                TypeScript, Firebase, Git, Redux Toolkit. Reference on project:
+                <a
+                  class="project-link"
+                  target="_blank"
+                  href="https://github.com/Sasha867/Kugoo-sports_store_project"
+                  .
+                  >Kugo-sports.</a
+                >
+              </li>
+              <li>
+                Special slills:
+                <ul type="square">
+                  <li>Higly organized</li>
+                  <li>Good communication and teamwork skills</li>
+                  <li>Creative approach to work</li>
+                </ul>
+              </li>
+            </ol>
+          </ul>
+        </section>
+        <section class="section" id="education">
+          <h2 class="section-title-right">Education</h2>
+        </section>
+        <section class="section" id="experience">
+          <h2 class="section-title-right">Experience</h2>
+        </section>
+        <section class="section" id="code">
+          <h2 class="section-title-right">Code</h2>
+        </section>
+        <section class="section" id="courses">
+          <h2 class="section-title-right">Courses</h2>
+        </section>
+        <section class="section" id="english">
+          <h2 class="section-title-right">English</h2>
+        </section>
       </div>
     </main>
     <footer class="footer"></footer>
