feat: add fontawesome icons

--- a/index.html
+++ b/index.html
@@ -58,39 +58,40 @@
         <section class="section-left" id="contacts">
           <h2 class="section-title-left">Contacts</h2>
           <ul class="contact-list">
-            <li>Gomel, Belarus</li>
+            <li><i class="fa-solid fa-location-dot"></i> Gomel, Belarus</li>
             <li>
+              <i class="fa-regular fa-envelope"></i>
               Email:
               <a class="link-contacts" href="mailto:aleksandrlozicnyj@gmail.com"
                 >aleksandrlozicnyj@gmail.com</a
               >
             </li>
             <li>
+              <i class="fa-brands fa-github"></i>
               Github:
               <a
                 class="link-contacts"
                 target="_blank"
                 href="https://github.com/Sasha867?tab=repositories"
-                >Sasha867</a
-              >
+                >Sasha867</a>
             </li>
             <li>
+              <i class="fa-brands fa-telegram"></i>
               Telegram:
               <a
                 class="link-contacts"
                 target="_blank"
                 href="https://t.me/Tank866"
-                >@Tank866</a
-              >
+                >@Tank866</a>
             </li>
             <li>
+              <i class="fa-brands fa-discord"></i>
               Discord:
               <a
                 class="link-contacts"
                 href="https://discord.com/channels/@me"
                 target="_blank"
-                >Sasha867#7759</a
-              >
+                >Sasha867#7759</a>
             </li>
           </ul>
         </section>
@@ -112,33 +113,28 @@
       <div class="container-right">
         <section class="section" id="profile">
           <h2 class="section-title-right">Profile</h2>
-          <ul class="profile-list">
-            <ol>
-              <li>
-                I'm a front-end developer who completed courses "IT Academy
-                Step".
-              </li>
-              <li>
-                I'm currently working on a sports store project using:
-                TypeScript, Firebase, Git, Redux Toolkit. Reference on project:
-                <a
-                  class="project-link"
-                  target="_blank"
-                  href="https://github.com/Sasha867/Kugoo-sports_store_project"
-                  .
-                  >Kugo-sports.</a
-                >
-              </li>
-              <li>
-                Special skills:
-                <ul class="list-special-skills">
-                  <li>Higly organized</li>
-                  <li>Good communication and teamwork skills</li>
-                  <li>Creative approach to work</li>
-                </ul>
-              </li>
-            </ol>
-          </ul>
+          <ol class="profile-list">
+            <li>
+              I'm a front-end developer who completed courses "IT Academy Step".
+            </li>
+            <li>
+              I'm currently working on a sports store project using: TypeScript,
+              Firebase, Git, Redux Toolkit. Reference on project:
+              <a
+                class="project-link"
+                target="_blank"
+                href="https://github.com/Sasha867/Kugoo-sports_store_project"
+                >Kugo-sports.</a>
+            </li>
+            <li>
+              Special skills:
+              <ul class="list-special-skills">
+                <li>Higly organized</li>
+                <li>Good communication and teamwork skills</li>
+                <li>Creative approach to work</li>
+              </ul>
+            </li>
+          </ol>
           <hr class="hr" />
         </section>
         <section class="section" id="education">
@@ -201,9 +197,7 @@
               class="link-git"
               target="_blank"
               href="https://github.com/Sasha867"
-              >Github/Sasha867</a
-            ></span
-          >
+              >Github/Sasha867</a></span>
         </div>
         <div>
           <a class="link-rs school" target="_blank" href="https://rs.school/js/"
