fix: fix the code

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
               <i class="fa-regular fa-envelope"></i>
               Email:
               <a class="link-contacts" href="mailto:aleksandrlozicnyj@gmail.com"
-                >aleksandrlozicnyj@gmail.com</a
-              >
+                >aleksandrlozicnyj@gmail.com</a>
             </li>
             <li>
               <i class="fa-brands fa-github"></i>
@@ -191,13 +190,13 @@
     <footer class="footer">
       <div class="container-footer">
         <div>
-          <span
-            >2022
+          <span><i class="fa-regular fa-copyright"></i> 2022
             <a
               class="link-git"
               target="_blank"
               href="https://github.com/Sasha867"
-              >Github/Sasha867</a></span>
+              > <i class="fa-brands fa-github"></i>visit my Github</a
+            ></span>
         </div>
         <div>
           <a class="link-rs school" target="_blank" href="https://rs.school/js/"
