feat: add @media

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
               <i class="fa-regular fa-envelope"></i>
               Email:
               <a class="link-contacts" href="mailto:aleksandrlozicnyj@gmail.com"
-                >aleksandrlozicnyj@gmail.com</a>
+                >aleksandrlozicnyj@gmail.com</a
+              >
             </li>
             <li>
               <i class="fa-brands fa-github"></i>
@@ -72,7 +73,8 @@
                 class="link-contacts"
                 target="_blank"
                 href="https://github.com/Sasha867?tab=repositories"
-                >Sasha867</a>
+                >Sasha867</a
+              >
             </li>
             <li>
               <i class="fa-brands fa-telegram"></i>
@@ -81,7 +83,8 @@
                 class="link-contacts"
                 target="_blank"
                 href="https://t.me/Tank866"
-                >@Tank866</a>
+                >@Tank866</a
+              >
             </li>
             <li>
               <i class="fa-brands fa-discord"></i>
@@ -90,7 +93,8 @@
                 class="link-contacts"
                 href="https://discord.com/channels/@me"
                 target="_blank"
-                >Sasha867#7759</a>
+                >Sasha867#7759</a
+              >
             </li>
           </ul>
         </section>
@@ -123,14 +127,15 @@
                 class="project-link"
                 target="_blank"
                 href="https://github.com/Sasha867/Kugoo-sports_store_project"
-                >Kugo-sports.</a>
+                >Kugo-sports.</a
+              >
             </li>
             <li>
               Special skills:
               <ul class="list-special-skills">
-                <li>Higly organized</li>
-                <li>Good communication and teamwork skills</li>
-                <li>Creative approach to work</li>
+                <li>Higly organized.</li>
+                <li>Good communication and teamwork skills.</li>
+                <li>Creative approach to work.</li>
               </ul>
             </li>
           </ol>
@@ -156,13 +161,13 @@
         <section class="section" id="code">
           <h2 class="section-title-right">Code</h2>
           <p>Task: "Merge two sorted arrays into one"</p>
-          <pre>
+          <pre class="code">
             <code>
-              function mergeArrays(arr1, arr2) {
-                const concatArr = arr1.concat(arr2);
-                const setArr = Array.from(new Set(concatArr));
-               return setArr.sort((a, b) => a - b);
-              }
+  function mergeArrays(arr1, arr2) {
+    const concatArr = arr1.concat(arr2);
+    const setArr = Array.from(new Set(concatArr));
+   return setArr.sort((a, b) => a - b);
+  }
             </code>
           </pre>
         </section>
@@ -171,11 +176,11 @@
           <h2 class="section-title-right">Courses</h2>
           <ul class="list-courses">
             <li class="item-courses">
-              IT Academy "Step" | Front-end developer <br />
+              IT Academy "Step" | Front-end developer. <br />
               <span class="data-courses">Oct 2021-Nov 2022</span>
             </li>
             <li class="item-courses">
-              RS School | «JavaScript/Front-end» <br />
+              RS School | «JavaScript/Front-end». <br />
               <span class="data-courses">Dec 2022</span>
             </li>
           </ul>
@@ -183,20 +188,23 @@
         <hr class="hr" />
         <section class="section" id="english">
           <h2 class="section-title-right">English</h2>
-          <p>B1-Pre-Intermediate</p>
+          <p>B1-Pre-Intermediate.</p>
         </section>
       </div>
     </main>
     <footer class="footer">
       <div class="container-footer">
         <div>
-          <span><i class="fa-regular fa-copyright"></i> 2022
+          <span
+            ><i class="fa-regular fa-copyright"></i> 2022
             <a
               class="link-git"
               target="_blank"
               href="https://github.com/Sasha867"
-              > <i class="fa-brands fa-github"></i>visit my Github</a
-            ></span>
+            >
+              <i class="fa-brands fa-github"></i>visit my Github</a
+            ></span
+          >
         </div>
         <div>
           <a class="link-rs school" target="_blank" href="https://rs.school/js/"
