--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <main class="main">
       <div class="container-left">
         <section class="section-left">
-          <div class="photo"></div>
-          <h1 class="section-title-left-h1">Alexandr Lozichny</h1>
+          <img class="photo" src="./assets/img/photo-avatar.png" alt="photo" />
+          <h1 class="section-title-left-profile">Alexandr Lozichny</h1>
         </section>
         <section class="section-left" id="contacts">
           <h2 class="section-title-left">Contacts</h2>
@@ -133,7 +133,7 @@
             <li>
               Special skills:
               <ul class="list-special-skills">
-                <li>Higly organized.</li>
+                <li>Highly organized.</li>
                 <li>Good communication and teamwork skills.</li>
                 <li>Creative approach to work.</li>
               </ul>
@@ -144,8 +144,7 @@
         <section class="section" id="education">
           <h2 class="section-title-right">Education</h2>
           <p>
-            Secondary specialized education in the specialty of car repair and
-            master of industrial training.
+            Technical specialized education and master of industrial training.
           </p>
         </section>
         <hr class="hr" />
@@ -188,7 +187,7 @@
         <hr class="hr" />
         <section class="section" id="english">
           <h2 class="section-title-right">English</h2>
-          <p>B1-Pre-Intermediate.</p>
+          <p>A2 English level (pre-intermediate).</p>
         </section>
       </div>
     </main>
