--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/42e99f8d6b.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="./assets/img/cv.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Cormorant+Garamond:ital,wght@1,300&family=Edu+VIC+WA+NT+Beginner&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&family=Noto+Sans:wght@300&family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Slab:wght@400;500&display=swap"
