--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/42e99f8d6b.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="shortcut icon" href="./assets/img/cv.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/cv.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Cormorant+Garamond:ital,wght@1,300&family=Edu+VIC+WA+NT+Beginner&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&family=Noto+Sans:wght@300&family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Slab:wght@400;500&display=swap"
@@ -23,32 +23,39 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav">
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="#contacts">Contacts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#profile">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="#code">Code</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="#courses">Courses</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#experience">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#education">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#english">English</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="header-container">
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="#contacts">Contacts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#profile">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#skills">Skills</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#code">Code</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#courses">Courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#experience">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#education">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#english">English</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="toggle-bars">
+          <div class="bars-line"></div>
+          <div class="bars-line"></div>
+          <div class="bars-line"></div>
+        </div>
+      </div>
     </header>
     <main class="main">
       <div class="container-left">
@@ -216,5 +223,6 @@
         </div>
       </div>
     </footer>
+    <script src="./index.js"></script>
   </body>
 </html>
