feat: burger-menu and function toggler

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             </li>
           </ul>
         </nav>
-        <div class="toggle-bars">
-          <div class="bars-line"></div>
-          <div class="bars-line"></div>
-          <div class="bars-line"></div>
+        <div class="burger-bar" id="burgerBar">
+          <span class="bar-line1"></span>
+          <span class="bar-line2"></span>
+          <span class="bar-line3"></span>
         </div>
       </div>
     </header>
@@ -209,7 +209,7 @@
               target="_blank"
               href="https://github.com/Sasha867"
             >
-              <i class="fa-brands fa-github"></i>visit my Github</a
+              <i class="fa-brands fa-github"></i> visit my Github</a
             ></span
           >
         </div>
