fix: fix list-skills adaptive

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </section>
         <section class="section-left" id="skills">
           <h2 class="section-title-left">Skills</h2>
-          <ul class="list-skills">
+          <ul class="list-skills" id="list-skills">
             <li>HTML5</li>
             <li>CSS, SCSS</li>
             <li>React</li>
@@ -160,8 +160,7 @@
           <h2 class="section-title-right">Experience</h2>
           <p>
             For some time i worked in my specialty, then i mainly worked as a
-            seller of non-food products (clothes) for individual enterpreneurs,
-            which i do now.
+            seller of non-food products (clothes) for individual enterpreneurs.
           </p>
         </section>
         <hr class="hr" />
@@ -195,7 +194,19 @@
         <hr class="hr" />
         <section class="section" id="english">
           <h2 class="section-title-right">English</h2>
-          <p>A2 English level (pre-intermediate).</p>
+          <ul>
+            <li>A2 English level (pre-intermediate).</li>
+            <li>
+              I'm currently studying
+              <a
+                class="link-english"
+                target="_blank"
+                href="https://www.bbc.co.uk/learningenglish"
+                >Learning English.</a
+              >
+            </li>
+            <li>I study with a tutor.</li>
+          </ul>
         </section>
       </div>
     </main>
