fix: fix html requirements

--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script
       src="https://kit.fontawesome.com/42e99f8d6b.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="shortcut icon" href="./assets/img/cv.png" type="image/x-icon" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="shortcut icon" href="./assets/img/cv.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
       href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Cormorant+Garamond:ital,wght@1,300&family=Edu+VIC+WA+NT+Beginner&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&family=Noto+Sans:wght@300&family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Slab:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Cormorant+Garamond:ital,wght@1,300&family=Edu+VIC+WA+NT+Beginner&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&family=Noto+Sans:wght@300&family=Roboto+Slab:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
+      rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <title>cv</title>
   </head>
   <body>
@@ -60,7 +58,7 @@
     <main class="main">
       <div class="container-left">
         <section class="section-left">
-          <img class="photo" src="./assets/img/photo-avatar.png" alt="photo" />
+          <img class="photo" src="./assets/img/photo-avatar.png" alt="photo">
           <h1 class="section-title-left-profile">Alexandr Lozichny</h1>
         </section>
         <section class="section-left" id="contacts">
@@ -147,7 +145,7 @@
               </ul>
             </li>
           </ol>
-          <hr class="hr" />
+          <hr class="hr">
         </section>
         <section class="section" id="education">
           <h2 class="section-title-right">Education</h2>
@@ -155,7 +153,7 @@
             Technical specialized education and master of industrial training.
           </p>
         </section>
-        <hr class="hr" />
+        <hr class="hr">
         <section class="section" id="experience">
           <h2 class="section-title-right">Experience</h2>
           <p>
@@ -163,7 +161,7 @@
             seller of non-food products (clothes) for individual enterpreneurs.
           </p>
         </section>
-        <hr class="hr" />
+        <hr class="hr">
         <section class="section" id="code">
           <h2 class="section-title-right">Code</h2>
           <p>Task: "Merge two sorted arrays into one"</p>
@@ -177,21 +175,21 @@
             </code>
           </pre>
         </section>
-        <hr class="hr" />
+        <hr class="hr">
         <section class="section" id="courses">
           <h2 class="section-title-right">Courses</h2>
           <ul class="list-courses">
             <li class="item-courses">
-              IT Academy "Step" | Front-end developer. <br />
+              IT Academy "Step" | Front-end developer. <br>
               <span class="data-courses">Oct 2021-Nov 2022</span>
             </li>
             <li class="item-courses">
-              RS School | «JavaScript/Front-end». <br />
+              RS School | «JavaScript/Front-end». <br>
               <span class="data-courses">Dec 2022</span>
             </li>
           </ul>
         </section>
-        <hr class="hr" />
+        <hr class="hr">
         <section class="section" id="english">
           <h2 class="section-title-right">English</h2>
           <ul>
@@ -229,8 +227,7 @@
             ><img
               class="logo-rs"
               src="./assets/img/rs_school_js.svg"
-              alt="logo RS School"
-          /></a>
+              alt="logo RS School"></a>
         </div>
       </div>
     </footer>
