fix: fix html requirements

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
               <i class="fa-regular fa-envelope"></i>
               Email:
               <a class="link-contacts" href="mailto:aleksandrlozicnyj@gmail.com"
-                >aleksandrlozicnyj@gmail.com</a
-              >
+                >aleksandrlozicnyj@gmail.com</a>
             </li>
             <li>
               <i class="fa-brands fa-github"></i>
@@ -79,8 +78,7 @@
                 class="link-contacts"
                 target="_blank"
                 href="https://github.com/Sasha867?tab=repositories"
-                >Sasha867</a
-              >
+                >Sasha867</a>
             </li>
             <li>
               <i class="fa-brands fa-telegram"></i>
@@ -89,8 +87,7 @@
                 class="link-contacts"
                 target="_blank"
                 href="https://t.me/Tank866"
-                >@Tank866</a
-              >
+                >@Tank866</a>
             </li>
             <li>
               <i class="fa-brands fa-discord"></i>
@@ -99,8 +96,7 @@
                 class="link-contacts"
                 href="https://discord.com/channels/@me"
                 target="_blank"
-                >Sasha867#7759</a
-              >
+                >Sasha867#7759</a>
             </li>
           </ul>
         </section>
@@ -133,8 +129,7 @@
                 class="project-link"
                 target="_blank"
                 href="https://github.com/Sasha867/Kugoo-sports_store_project"
-                >Kugo-sports.</a
-              >
+                >Kugo-sports.</a>
             </li>
             <li>
               Special skills:
@@ -170,7 +165,7 @@
   function mergeArrays(arr1, arr2) {
     const concatArr = arr1.concat(arr2);
     const setArr = Array.from(new Set(concatArr));
-   return setArr.sort((a, b) => a - b);
+   return setArr.sort((a, b) =&gt; a - b);
   }
             </code>
           </pre>
@@ -200,8 +195,7 @@
                 class="link-english"
                 target="_blank"
                 href="https://www.bbc.co.uk/learningenglish"
-                >Learning English.</a
-              >
+                >Learning English.</a>
             </li>
             <li>I study with a tutor.</li>
           </ul>
@@ -211,23 +205,21 @@
     <footer class="footer">
       <div class="container-footer">
         <div>
-          <span
-            ><i class="fa-regular fa-copyright"></i> 2022
+          <span><i class="fa-regular fa-copyright"></i> 2022
             <a
               class="link-git"
               target="_blank"
-              href="https://github.com/Sasha867"
-            >
+              href="https://github.com/Sasha867">
               <i class="fa-brands fa-github"></i> visit my Github</a
-            ></span
-          >
+            ></span>
         </div>
         <div>
-          <a class="link-rs school" target="_blank" href="https://rs.school/js/"
-            ><img
+          <a class="link-rs school" target="_blank" href="https://rs.school/js/">
+            <img
               class="logo-rs"
               src="./assets/img/rs_school_js.svg"
-              alt="logo RS School"></a>
+              alt="logo RS School">
+          </a>
         </div>
       </div>
     </footer>
